# ice

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  ice_exception.h  ice_function.h  ice_library.cpp  ice_library.h  ice_library_manager.cpp  ice_library_manager.h  readme.md
.github/workflows/: build.yml
include/ice/: ice.h  ice_exception.h  ice_function.h  ice_library.h  ice_library_manager.h  ice_library_name.h
src/: ice_library.cpp  ice_library_manager.cpp  ice_library_name.cpp
tests/: CMakeLists.txt  test_ice_exception.cpp  test_ice_function.cpp  test_ice_library.cpp  test_ice_library_manager.cpp  test_ice_library_name.cpp
tests/testlib/: CMakeLists.txt
tests/testlib/include/: test.h
tests/testlib/src/: test.cpp
